<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Injoee</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_game">My_game</string>

    <!-- 主界面 -->

    <string name="my_game_title">My Games</string>
    <string name="featured_game_title">Featured Games</string>
    <string name="game_download">Download</string>
    <string name="game_play">Play</string>
    <string name="game_install">Install</string>
    <string name="game_download_pause">Pause</string>
    <string name="game_download_continue">Continue</string>
    <string name="game_download_installed">Install</string>
    <string name="action_bar_feedback">Feedback</string>
    <string name="network_retry">Retry</string>

    <!-- 初始化界面 -->
    <string name="game_starting">Life is short, just Injoee!</string>

    <!-- footer and loader -->
    
    <string name="xlistview_header_hint_normal">Pull to Refresh</string>
    <string name="xlistview_header_hint_ready">Lose to Refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Latest Updated Time:</string>
    <string name="xlistview_footer_hint_normal">View More</string>
    <string name="xlistview_footer_hint_ready">Lose to Load More</string>
    <string name="xListView_footer_hint_no_more">No More Game</string>

	<string name="extracting">Extracting...</string>
	
    <!-- test String -->

    <string name="test_game_name_short">Angry Bird</string>
    <string name="test_game_type">Shooting Game</string>
    <string name="test_game_size">12M</string>
    <string name="title_activity_game_detail">GameDetail</string>
    <string name="test_reputation_num">200</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    
        <!-- ad alertdailog content -->
    
    <string name="ad_favrite_message">We need your donation for operation cost! Begging you to download an app then launch it! This dialog will show every 3 games downloaded. Thanks a million!</string>
    <string name="ad_favrite_donate">Donate</string>
    <string name="ad_favrite_reject">Reject</string>
    <string name="ad_favrite_title">Donation Needed!</string>
</resources>