<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="6dp" >

    <ImageView
        android:id="@+id/iv_my_games_icon"
        android:layout_width="53dip"
        android:layout_height="53dip"
        android:background="@drawable/icon" >
    </ImageView>

    <LinearLayout
        android:id="@+id/ll_my_game_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/iv_my_games_icon"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_my_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_game_name_short"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_my_game_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/test_game_size"
            android:textColor="@color/gray"
            android:textSize="12dp" />
    </LinearLayout>

    <Button 
        android:id="@+id/btn_delete_game"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:layout_toRightOf="@id/ll_my_game_info"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/del"
        />

    <Button
        android:id="@+id/btn_play_game"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background_download"
        android:text="@string/game_play"
        android:textColor="@color/white"
        android:textSize="13dp" />

</RelativeLayout>