<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp"
    android:paddingBottom="7dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:background="@color/white"
     >

    <ImageView
        android:id="@+id/iv_featured_games_icon"
        android:layout_width="53dip"
        android:layout_height="53dip"
        android:background="@drawable/list_default_icon" >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_featured_games_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/test_game_name_short"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="15dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <!-- 普通呈现应用信息的状态 -->

            <LinearLayout
                android:id="@+id/ll_game_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tv_featured_game_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_featured_game_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="29dp"
                    android:text="@string/test_game_size"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

            <!-- 下载的状态 -->

            <LinearLayout
                android:id="@+id/ll_game_download_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible"
                 >

                <ProgressBar
                    android:id="@+id/pb_featured_game_download"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="85dp"
                    android:layout_height="7dp"
                    android:layout_marginLeft="2dp"
                    android:layout_gravity="center_vertical"
                    android:max="100"
                    android:progress="100"
                    android:secondaryProgress="100" />

                <ImageButton
                    android:id="@+id/ib_download_cancel"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/clear_normal" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_featured_game_downlaod"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_alignParentEnd="true"
        android:text="@string/game_download"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:background="@drawable/button_background_download"
         />
    
    <TextView 
        android:id="@+id/tv_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    
</RelativeLayout>