<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp" >

                <ImageView
                    android:id="@+id/iv_game_detail_icon"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/icon" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@+id/iv_game_detail_icon"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_game_type_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/test_game_type"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/tv_game_size_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/test_game_size"
                        android:textColor="@color/black" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.06dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="2dp"
                android:background="@color/gray" >
            </View>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="185dp"
                android:paddingBottom="5dp" >

                <LinearLayout
                    android:id="@+id/ll_imagescontainer"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/iv_image1"
                        android:layout_width="117dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/iv_image2"
                        android:layout_width="117dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/iv_image3"
                        android:layout_width="117dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/iv_image4"
                        android:layout_width="117dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image"
                         />

                    <ImageView
                        android:id="@+id/iv_image5"
                        android:layout_width="117dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_image"
                        android:visibility="gone"
                         />
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.06dp"
                android:layout_marginTop="2dp"
                android:background="@color/gray" >
            </View>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal" >

                    <!-- 两个按钮 -->

                    <LinearLayout
                        android:id="@+id/ll_reputation_good"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_reputation_num"
                        android:clickable="true"
                        android:orientation="horizontal" >

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/reputation_good" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/tv_reputation_good_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp"
                                android:text="@string/test_reputation_num"
                                android:textColor="@color/reputation_num" />
                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="fill_parent"
                        android:background="@color/gray" >
                    </View>

                    <LinearLayout
                        android:id="@+id/ll_reputation_bad"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_reputation_num"
                        android:clickable="true"
                        android:orientation="horizontal" >

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/reputation_bad" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/tv_reputation_bad_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp"
                                android:text="@string/test_reputation_num"
                                android:textColor="@color/reputation_num" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:background="@color/gray" >
            </View>

            <TextView
                android:id="@+id/tv_game_detail_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/download"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_background_download"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/game_download"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </RelativeLayout>

</RelativeLayout>